# xoon_rust_service_template

./: Cargo.toml  README.md  renovate.json
.github/workflows/: check.yaml
internal/externalinterface/: Cargo.toml
internal/interfaceadapter/repository/: Cargo.toml
internal/interfaceadapter/service/: Cargo.toml
scripts/githooks/: pre-commit
