[package]
name = "xoon_rust_service_template"
version = "0.1.0"
edition = "2021"

[dependencies]
externalinterface = { path = "internal/externalinterface" }
service = { path = "internal/interfaceadapter/service" }
repository = { path = "internal/interfaceadapter/repository" }
usecase = { path = "internal/usecase" }

[workspace]
members = [
  "internal/externalinterface",
  "internal/interfaceadapter/service",
  "internal/interfaceadapter/repository",
  "internal/usecase"
]
